--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.12.7",
     "@emotion/css": "^11.0.0",
     "babel-loader": "^8.2.1",
+    "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^5.0.1",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^2.0.0",
