--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --progress --mode development",
-    "build": "webpack --progress --mode production"
+    "start": "webpack --mode development",
+    "build": "webpack --progress --mode production",
   },
   "author": "",
   "license": "ISC",
