--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts-cssmodules": "^1.1.50",
+    "react-st-modal": "^1.1.3",
     "victory": "^35.4.3"
   }
 }
