--- a/package.json
+++ b/package.json
@@ -1,46 +1,8 @@
 {
-  "name": "tf_ssurank_web_layout",
+  "name": "tf_SSURANK",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_PATH=src webpack serve --progress --mode development",
-    "start": "cross-env NODE_PATH=src webpack --mode development",
-    "build": "cross-env NODE_PATH=src webpack --progress --mode production"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.12.8",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@emotion/css": "^11.0.0",
-    "babel-loader": "^8.2.1",
-    "copy-webpack-plugin": "^6.3.2",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
-    "react-hot-loader": "^4.13.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^4.5.0",
-    "node": "^15.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts-cssmodules": "^1.1.50",
-    "react-st-modal": "^1.1.3",
-    "victory": "^35.4.3"
-  }
+  "repository": "https://github.com/Margarets00/tf_SSURANK.git",
+  "author": "margarets00 <minj01134@gmail.com>",
+  "license": "MIT"
 }
