--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "4.0.0",
     "react-hot-loader": "^4.13.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.6.0",
@@ -42,13 +48,20 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^4.5.1",
     "node": "^15.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-router-prop-types": "^1.0.5",
     "react-scripts-cssmodules": "^1.1.50",
     "react-st-modal": "^1.1.3",
     "victory": "^35.4.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "airbnb"
+    ]
   }
 }
