--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "node": "^15.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-router-dom": "^5.2.0",
+    "react-router-ga": "^1.2.3",
     "react-router-prop-types": "^1.0.5",
     "react-scripts-cssmodules": "^1.1.50",
     "react-st-modal": "^1.1.3",
