--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_PATH=src webpack serve --progress --mode development",
+    "dev": "cross-env NODE_ENV=production NODE_PATH=src webpack serve --progress --mode development",
     "start": "cross-env NODE_PATH=src webpack --mode development",
     "build": "cross-env NODE_PATH=src webpack --progress --mode production",
-    "storybook": "start-storybook -p 6006 -s public",
+    "storybook": "start-storybook -p 6006 -c .storybook",
     "build-storybook": "build-storybook -s public"
   },
   "author": "",
@@ -18,12 +18,13 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@emotion/css": "^11.0.0",
-    "@storybook/addon-actions": "^6.1.11",
-    "@storybook/addon-essentials": "^6.1.11",
-    "@storybook/addon-links": "^6.1.11",
-    "@storybook/node-logger": "^6.1.11",
-    "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.11",
+    "@storybook/addon-actions": "^6.2.0-rc.3",
+    "@storybook/addon-essentials": "^6.2.0-rc.3",
+    "@storybook/addon-links": "^6.2.0-rc.3",
+    "@storybook/builder-webpack5": "^6.2.0-rc.4",
+    "@storybook/node-logger": "^6.2.0-rc.3",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.2.0-rc.3",
     "babel-loader": "^8.2.1",
     "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^7.0.3",
@@ -48,7 +49,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.3.1",
     "node": "^15.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -58,12 +59,40 @@
     "react-router-prop-types": "^1.0.5",
     "react-scripts-cssmodules": "^1.1.50",
     "react-st-modal": "^1.1.3",
+    "recoil": "^0.1.2",
+    "storybook": "^6.2.0-rc.4",
     "victory": "^35.4.3"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "airbnb"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      },
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      },
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   }
 }
