--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "clean-webpack-plugin": "^3.0.0",
+    "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^5.3.1",
     "node": "^15.2.1",
     "react": "^17.0.1",
